--- a/Troubleshooting/How-to-Transfer-a-Dashboard-to-Another-Account.mdx
+++ b/Troubleshooting/How-to-Transfer-a-Dashboard-to-Another-Account.mdx
@@ -1,5 +1,9 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "How to Transfer a Dashboard to Another Account"
 ---
 
+- **Contact support by email** with:
+  - The email address of the target account.
+  - The Site ID of the dashboard to transfer.
+- **Support handles the transfer** process and typically completes it within a day.
+- This ensures a secure and smooth ownership transfer between Fathom accounts
