Documentation edits made through Mintlify web editor

--- a/Troubleshooting/How-to-Transfer-a-Dashboard-to-Another-Account.mdx
+++ b/Troubleshooting/How-to-Transfer-a-Dashboard-to-Another-Account.mdx
@@ -2,6 +2,8 @@
 title: "How to Transfer a Dashboard to Another Account"
 ---
 
+**To transfer a site (dashboard) to another user, simply reach out to the support team.**
+
 - **Contact support by email** with:
   - The email address of the target account.
   - The Site ID of the dashboard to transfer.
