Documentation edits made through Mintlify web editor

--- a/Troubleshooting/Why-has-my-account-been-locked.mdx
+++ b/Troubleshooting/Why-has-my-account-been-locked.mdx
@@ -1,3 +1,21 @@
 ---
 title: "Why has my account been locked?"
 ---
+
+If a payment remains overdue for more than seven days or if plan limits are repeatedly exceeded without upgrading, the account will be locked until payment is made. Data collection continues during this time, but account access will be restricted until the outstanding amount is settled.
+
+Refer to the billing FAQ section to get more details on how billing operates.
+
+## Handling Unpaid Invoices
+
+If the payment card on file has expired or lacks sufficient funds, we are unable to process the required payments for your service. When this happens, your account will be locked, and you’ll need to update your payment method to clear any unpaid invoices. If you have notified your bank or resolved card issues, the same card may be used after the changes.
+
+Once the billing section is completed and all dues are paid—including any missed payments over the last several months—your account will unlock. For example, if there are seven months of unpaid invoices and a new or valid card is added, all outstanding payments will be processed together, immediately restoring access.
+
+## What happens if you regularly exceed your plan limit?
+
+If your website consistently surpasses the allowed number of page views for multiple months, or exceeds the limit during the very first month, you’ll receive several reminders via email to upgrade your plan. Failing to upgrade within seven days will result in your account being locked until you make the necessary changes. During this period, your data will continue to be tracked for 30 days, but you won’t have access to your dashboard until your plan and billing are updated.
+
+Once you’ve completed the upgrade, dashboard access is restored as normal. If you believe your plan is incorrect, you can always contact support for help resolving the issue.
+
+If you decide not to switch to a plan that better fits your long-term usage, you may also choose to cancel your account.
