Documentation edits made through Mintlify web editor

--- a/Troubleshooting/Will-my-analytics-data-be-lost-if-I-update-the-site-name-or-URL.mdx
+++ b/Troubleshooting/Will-my-analytics-data-be-lost-if-I-update-the-site-name-or-URL.mdx
@@ -1,5 +1,7 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Will my analytics data be lost if I update the site name or URL?"
 ---
 
+You can change your dashboard’s site name in your analytics account whenever needed—this won’t affect your Site ID or require any changes to your tracking script.
+
+Similarly, updating your website’s URL will not cause any loss of previously collected stats, provided you don’t remove the site from your analytics platform.
